<resources>
    <string name="app_name">AppToDo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_title_profile">PROFILE</string>
    <string name="lblFirstName">First Name</string>
    <string name="lblLastName">Last Name</string>
    <string name="lblID">ID</string>
    <string name="lbl_btn_search">Search</string>
</resources>
